--- a/countdown/index.html
+++ b/countdown/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <img id="ring" src="./circle.png" alt="" />
+    <span id="click-txt">Click!</span>
     <canvas></canvas>
     <div id="countdown">
       <span>3</span>
